--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Add a header -->
     <header>
-        <h1>World of holidays</h1>
+        <h1>Most common sports in the US in 2022</h1>
     </header>
     <!-- Add content to the body -->
     <main>
@@ -19,49 +19,59 @@
             <tr>
                 <!-- These are column headers -->
                 <th>Date</th>
-                <th>Holiday Name</th>
+                <th>Sport Name</th>
                 <th>Country</th>
             </tr>
             <!-- Add a row for the table body, this is row #2, below the header -->
             <tr>
                 <!-- These are column data -->
-                <td>1/1/2023</td>
-                <td>New Years Day</td>
-                <td>Australia</td>
+                <td>2022</td>
+                <td>#1 American Football</td>
+                <td>United States</td>
             </tr>
             <!-- Add a row for the table body, this is row #3, below the header -->
             <tr>
                 <!-- These are column data -->
-                <td>1/1/2023</td>
-                <td>New Years Day</td>
-                <td>Australia</td>
+                <td>2022</td>
+                <td>#2 Basketball</td>
+                <td>United States</td>
             </tr>
             <!-- Add a row for the table body, this is row #4, below the header -->
             <tr>
                 <!-- These are column data -->
-                <td>1/1/2023</td>
-                <td>New Years Day</td>
-                <td>Australia</td>
+                <td>2022</td>
+                <td>#3 Softball/Baseball</td>
+                <td>United States</td>
             </tr>
             <!-- Add a row for the table body, this is row #5, below the header -->
             <tr>
                 <!-- These are column data -->
-                <td>1/1/2023</td>
-                <td>New Years Day</td>
-                <td>Australia</td>
+                <td>2022</td>
+                <td>#4 Soccer</td>
+                <td>United States</td>
             </tr>
             <!-- Add a row for the table body, this is row #6, below the header -->
             <tr>
                 <!-- These are column data -->
-                <td>1/14/2023</td>
-                <td>Orthodox</td>
-                <td>Australia</td>
+                <td>2022</td>
+                <td>#5 Ice Hockey</td>
+                <td>United States</td>
+            </tr>
+             <!-- Add a row for the table body, this is row #6, below the header -->
+             <tr>
+                <!-- These are column data -->
+                <td>2022</td>
+                <td>#6 Tennis</td>
+                <td>United States</td>
             </tr>
         </table>
 
     </main>
     <!-- Add a footer -->
     <footer>
+        <p>Most common sports in the US in 2022</p>
+        <!--This is Student Alexander Garcia-->
+        
 
     </footer>
     
